# grafanarama

./: .env.example  .gitignore  LICENSE  New dashboard-1710994553403.json  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
examples/: dashboard_with_text_panel.py  simple_dashboard.py  test_auth.py
grafanarama/: __init__.py  apiclient.py  schema_utils.py
grafanarama/composable/dataquery/: azuremonitor  cloudwatch  elasticsearch  googlecloudmonitoring  grafanapyroscope  loki  parca  prometheus  tempo  testdata
grafanarama/composable/panelcfg/: alertgroups  annotationslist  barchart  bargauge  candlestick  canvas  dashboardlist  datagrid  debug  gauge  geomap  heatmap  histogram  logs  news  nodegraph  piechart  stat  statetimeline  statushistory  table  text  timeseries  trend
grafanarama/core/accesspolicy/: __init__.py  status.py
grafanarama/core/dashboard/: __init__.py  status.py
grafanarama/core/librarypanel/: __init__.py  status.py
grafanarama/core/preferences/: __init__.py  status.py
grafanarama/core/publicdashboard/: __init__.py  status.py
grafanarama/core/role/: __init__.py  status.py
grafanarama/core/rolebinding/: __init__.py  status.py
grafanarama/core/team/: __init__.py  status.py
tests/: test_dashboard.py
