[tool.poetry]
name = "grafanarama"
version = "0.1.0"
description = "A Python library to create Grafana Dashboards"
authors = ["Eric Salituro <esalituro@icloud.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.12.5"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^25.12.0"
tox = "^4.32.0"
pytest-cov = "^7.0.0"
setuptools = "^80.9.0"

[tool.poetry.group.generate.dependencies]
datamodel-code-generator = "^0.43.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
